# deche

./: .buildinfo  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  HISTORY.md  Makefile  README.md  cirrus.conf  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.binder/: postBuild  requirements.txt
.github/workflows/: docs.yml  pre-commit.yml  test.yml
1_getting_started/: getting_started.html
2_user_guide/: usage.html
_sources/1_getting_started/: getting_started.ipynb
_sources/2_user_guide/: usage.ipynb
deche/: __init__.py  cache.py  core.py  enums.py  inspection.py  serialization.py  test_utils.py  types.py  util.py  validators.py
deche/test_utils/: __init__.py
docs/: _config.yml  _toc.yml  index.md
docs/1_getting_started/: getting_started.ipynb
docs/2_user_guide/: usage.ipynb
tests/unit/: conftest.py  test_core.py  test_singleton.py  test_validators.py
