[tool.poetry]
name = "deche"
version = "0.4.0"
description = ""
authors = ["Bradley McElroy <bradley.mcelroy@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fsspec = "^2021.10.1"
donfig = "^0.6.0"
cloudpickle = "^2.0.0"
s3fs = "^2021.7.0"
frozendict = "^2.0.6"
anyio = "^3.3.4"
pytest-asyncio = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.931"
jupyter-book = "^0.12.0"
ipykernel = "^6.4.2"
poetry2setup = "^1.0.0"
setuptools = "^58.0.4"
pip = "^21.2.4"
coverage = "^6.0.2"
pandas = "^1.3.5"
pyarrow = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
s3 = ["s3fs"]
