[tool.poetry]
name = "deche"
version = "0.1.0"
description = ""
authors = ["Bradley McElroy <bradley.mcelroy@live.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fsspec = ">=2022"
cloudpickle = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
