[tool.poetry]
name = "deche"
version = "0.8.0"
description = ""
authors = ["Bradley McElroy <bradley.mcelroy@live.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fsspec = ">=2021.10.1"
donfig = "^0.7.0"
cloudpickle = "^2.0.0"
s3fs = {version = ">=2021.7.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.3"
pytest-asyncio = "^0.21"
jupyter-book = "^0.15"
ipykernel = "^6.4.2"
poetry2setup = "^1.0.0"
pandas = "^1.5"
pyarrow = "^11.0.0" # required for test_custom_serializer

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
s3 = ["s3fs"]
